--- a/README
+++ b/README
@@ -47,3 +47,9 @@ http://www.codeproject.com/KB/GDI-plus/PolygonCollision.aspx
 
 Tim Kerchmar - spatial hashing
 http://nightschool.near-time.net/news/2007/8/8/broad-or-narrow-the-sword-is-sharp
+
+Paul Bourke - line line intersection
+http://local.wasp.uwa.edu.au/~pbourke/geometry/lineline2d/
+
+Metanet forum user Derakon - circle line intersection
+http://metanet.2.forumer.com/index.php?s=fc6241ec4e0370ea34fa7734eb804ce7&showtopic=17590
